--- a/src/Components/CSS/Navbar.css
+++ b/src/Components/CSS/Navbar.css
@@ -2,6 +2,7 @@ ul {
     list-style-type: none;
     margin: 0;
     padding: 0;
+    padding-left: 3rem;
     overflow: hidden;
     background-color: #333;
   }
@@ -13,6 +14,7 @@ ul {
   
   li:last-child {
     border-right: none;
+    
   }
   
   li a {
@@ -21,10 +23,12 @@ ul {
     text-align: center;
     padding: 14px 16px;
     text-decoration: none;
+    
   }
   
   li a:hover:not(.active) {
     background-color: #111;
+    border-radius: 1ex;
   }
   
   .active {
