--- a/src/App.css
+++ b/src/App.css
@@ -16,7 +16,8 @@
 
 .App-header {
   background-color: #282c34;
-  min-height: 100vh;
+  max-height: 100vh;
+  min-height: 94.6vh;
   display: flex;
   flex-direction: column;
   align-items: center;
