--- a/src/index.css
+++ b/src/index.css
@@ -4,6 +4,7 @@
 
 
 body {
+  height: 94.6vh;
   margin: 0;
   padding: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
